[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molecular3d-length-descriptors"
version = "2.0.0"
description = "3D conformational based molecular descriptors for shape analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Thomas Jewson", email = "t.jewson1@gmail.com"},
]
maintainers = [
    {name = "Thomas Jewson", email = "t.jewson1@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["molecular", "descriptor", "3d", "length", "rdkit", "machine-learning", "cheminformatics", "conformers"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "rdkit",
    "click>=8.0.0",
    "rich>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
]
analysis = [
    "pandas>=1.3.0",
    "matplotlib>=3.0.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
]
visualization = [
    "plotly>=5.0.0",
    "ipywidgets>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/ThomasJewson/Molecular3DLengthDescriptors"
Repository = "https://github.com/ThomasJewson/Molecular3DLengthDescriptors"
Documentation = "https://github.com/ThomasJewson/Molecular3DLengthDescriptors"
"Bug Tracker" = "https://github.com/ThomasJewson/Molecular3DLengthDescriptors/issues"

[project.scripts]
mol3d-descriptors = "molecular3d_length_descriptors.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["molecular3d_length_descriptors*", "Molecular3DLengthDescriptors*"]

[tool.setuptools.package-data]
molecular3d_length_descriptors = ["*.txt", "*.md", "data/*"]
Molecular3DLengthDescriptors = ["*.txt", "*.md", "data/*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["molecular3d_length_descriptors", "Molecular3DLengthDescriptors"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["molecular3d_length_descriptors", "Molecular3DLengthDescriptors"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]